--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@coreui/utils": "^1.3.1",
     "@supabase/supabase-js": "^2.21.0",
     "@supabase/ui": "^0.36.5",
+    "angular-toastify": "^1.0.6",
     "angular-uuid": "^0.0.4",
     "chart.js": "^3.9.1",
     "ngx-perfect-scrollbar": "^10.1.1",
