--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "angular-toastify": "^1.0.6",
     "angular-uuid": "^0.0.4",
     "chart.js": "^3.9.1",
+    "ng2-pdf-viewer": "^9.1.5",
+    "ngx-doc-viewer": "^15.0.1",
+    "ngx-extended-pdf-viewer": "^17.3.1",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
