--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "preserveSymlinks": true,
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets","_redirects"],
             "styles": ["src/scss/styles.scss"],
             "allowedCommonJsDependencies": [
               "chart.js",
@@ -96,7 +96,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets","_redirects"],
             "styles": ["src/scss/styles.scss"],
             "scripts": []
           }
